--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -38,8 +38,7 @@
                         android:layout_height="32dp"
                         android:layout_gravity="center_vertical"
                         android:padding="5dp"
-                        android:src="@drawable/action_back"
-                        android:visibility="gone"/>
+                        android:src="@drawable/action_back" />
 
 
                     <TextView
@@ -49,7 +48,7 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="10dp"
                         android:gravity="left"
-                        android:text="Login"
+                        android:text="Machine List"
                         android:textColor="@color/white"
                         android:textSize="18sp"
                         android:textStyle="bold"/>
@@ -60,37 +59,51 @@
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@+id/appBarLayout">
+        android:layout_below="@+id/appBarLayout"
+        android:gravity="center"
+        android:orientation="vertical">
     <Button
         android:id="@+id/buttonSync"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30sp"
         android:text="Sync"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/mid_blue"
         android:layout_margin="10dp"
-        android:layout_gravity="center"
         android:textColor="@color/white"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:padding="12dp">
-
-    </android.support.v7.widget.RecyclerView>
-
-    <TextView
-        android:id="@+id/textViewNoData"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="No Data"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:visibility="gone" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/gray"
+            />
     </LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_below="@+id/linearLayout">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:padding="12dp">
+
+            </android.support.v7.widget.RecyclerView>
+
+            <TextView
+                android:id="@+id/textViewNoData"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="No Data Found"
+                android:textColor="@color/black"
+                android:layout_gravity="center"
+                android:layout_marginTop="100dp"
+                android:textSize="17sp"
+                android:visibility="gone" />
+        </RelativeLayout>
 
 </RelativeLayout>
