--- a/app/src/main/res/layout/activity_scan_barcode.xml
+++ b/app/src/main/res/layout/activity_scan_barcode.xml
@@ -2,9 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@color/white">
+    android:id="@+id/relativeLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.webakruti.gmr.ScanBarcodeActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -59,48 +60,37 @@
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
-    <ScrollView
-        android:layout_below="@+id/appBarLayout"
-        android:scrollbars="none"
+    <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        android:background="@color/white"
+        android:layout_below="@+id/appBarLayout"
+        android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/foxLogo"
+        android:layout_width="250dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:src="@drawable/gmr_logo"
+        />
+    </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:background="@color/white"
-            android:orientation="vertical">
+    <SurfaceView
+        android:id="@+id/cameraPreview"
+        android:layout_width="match_parent"
+        android:layout_height="700px"
+        android:layout_centerInParent="true"
+        android:layout_margin="16dp"/>
 
-            <ImageView
-                android:id="@+id/foxLogo"
-                android:layout_width="250dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="30dp"
-                android:src="@drawable/gmr_logo" />
-
-
-
-            <Button
-                android:id="@+id/buttonScan"
-                android:layout_width="300dp"
-                android:layout_height="60dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="100dp"
-                android:layout_marginBottom="10dp"
-                android:background="@color/dark_blue"
-                android:foreground="?selectableItemBackground"
-                android:text="SCAN QR Code"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:textSize="20sp" />
-
-
-
-        </LinearLayout>
-
-    </ScrollView>
+    <TextView
+        android:layout_centerHorizontal="true"
+        android:id="@+id/textViewResult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cameraPreview"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
+        android:text="Please focus camera to QR code"
+        />
 </RelativeLayout>
-
-
