--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    tools:context=".ScannerActivity">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/appBarLayout"
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        app:elevation="0dp">
+        android:theme="@style/AppTheme.AppBarOverlay">
+
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="@color/dark_blue">
+            android:background="@color/dark_blue"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
 
 
             <RelativeLayout
@@ -58,39 +57,11 @@
 
             </RelativeLayout>
         </android.support.v7.widget.Toolbar>
+
     </android.support.design.widget.AppBarLayout>
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:background="@color/white"
-        android:layout_below="@+id/appBarLayout"
-        android:orientation="vertical">
+    <include layout="@layout/content_scanner" />
 
-    <ImageView
-        android:id="@+id/foxLogo"
-        android:layout_width="250dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:src="@drawable/gmr_logo"
-        />
-    </LinearLayout>
 
-    <SurfaceView
-        android:id="@+id/cameraPreview"
-        android:layout_width="match_parent"
-        android:layout_height="700px"
-        android:layout_centerInParent="true"
-        android:layout_margin="16dp"/>
 
-    <TextView
-        android:layout_centerHorizontal="true"
-        android:id="@+id/textViewResult"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/cameraPreview"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center"
-        android:text="Please focus camera to QR code"
-        />
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
